--- a/style.css
+++ b/style.css
@@ -1,9 +1,25 @@
+html {
+    background-color: black;
+
+}
+
+.mainbody {
+    background-color: #161616;
+    color: white;
+    width: 840px;
+    height: 600px;
+    padding: 35px;
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .collapsible {
     background-color: #777;
     color: white;
     cursor: pointer;
     padding: 18px;
-    width: 50%;
+    width: 100%;
     border: none;
     text-align: left;
     outline: none;
@@ -24,9 +40,10 @@
 }
 
 .header-img {
+    background-image: url(Images/BGTwittedec.png);
     width: 100%;
     height: 300px;
-    background-size: cover;
+    background-size: auto;
 }
 
 .hero-text {
@@ -49,5 +66,111 @@
 .holder {
     text-align: center;
     top: 20%;
-    left: 50%;
+    left: 100%;
+}
+
+.centered {
+    position: absolute;
+    top: 30%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-shadow: 2px 2px purple;
+    font-size: 2em;
+    font-weight: bold;
+    line-height: 1;
+    font-family: 'Domine', serif;
+    text-align: left;
+
+}
+
+.centered:hover {
+    color: cyan;
+}
+
+.number {
+    position: absolute;
+    top: 50%;
+    left: 10%;
+    transform: translate(-50%, -50%);
+    padding-left: 85px;
+    padding-top: 23px;
+    padding-bottom: 5px;
+    color: white;
+    text-shadow: 1px 1px #000;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 1;
+    font-family: 'Domine', serif;
+}
+
+
+.description {
+    position: absolute;
+    top: 70%;
+    left: 40%;
+    text-align: left;
+    transform: translate(-50%, -50%);
+    padding-left: 85px;
+    padding-top: 23px;
+    padding-bottom: 5px;
+    color: white;
+    text-shadow: 1px 1px #000;
+    font-size: 1em;
+
+    line-height: 1;
+    font-family: 'Domine', serif;
+}
+
+
+
+.preview-image-holder {
+    position: relative;
+    width: 100%;
+    height: 80px;
+    border: 1px solid grey;
+}
+
+.preview-image-holder:hover {
+    border: 1px solid white;
+
+}
+
+.patreon-link {
+
+    height: 50px;
+    color: white;
+    padding-left: 20px;
+    padding-top: 10px;
+    text-shadow: 1px 1px #000;
+    font-size: 1em;
+    font-weight: bold;
+    line-height: 1;
+    font-family: 'Domine', serif;
+}
+
+.headertext {
+
+    height: 50px;
+    color: white;
+    text-shadow: 1px 1px #000;
+    background-color: darkslategray;
+    font-size: 1em;
+    padding-top: 23px;
+    text-align: center;
+    font-weight: bold;
+    line-height: 1;
+    font-family: 'Domine', serif;
+}
+
+.patreon-link:hover {
+    color: aqua;
+
+}
+
+Patreon {
+    max-height: 20px;
+    top: 3px;
+    content: url(/TutorialLinks/Images/PatreonIcon.png);
+    position: relative;
 }
