--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ html {
     text-align: center;
     position: absolute;
     font-family: 'Duru Sans', sans-serif;
-    top: 20%;
+    top: 10%;
     left: 50%;
     transform: translate(-50%, -30%);
     text-shadow: 2px 2px 5px black;
@@ -109,11 +109,11 @@ html {
     top: 20%;
     left: 90%;
     padding-bottom: 5px;
-    color: aquamarine;
+    color: thistle;
     text-shadow: 2px 2px #000;
     font-size: 1em;
 
-    font-weight: bold;
+
     line-height: 1;
     font-family: 'Domine', serif;
 }
@@ -155,14 +155,33 @@ html {
 
     height: 40px;
     color: white;
-    padding-left: 20px;
+    padding-right: 20px;
+
     padding-top: 10px;
     text-shadow: 1px 1px #000;
+    text-align: right;
     font-size: 1em;
     font-weight: bold;
     line-height: 1;
     font-family: 'Domine', serif;
     background-color: black;
+}
+
+.normal-link {
+
+    height: 40px;
+    width: 550px;
+    color: white;
+    padding-left: 30px;
+    padding-top: 15px;
+    text-shadow: 1px 1px #000;
+    text-align: left;
+    float: left;
+    font-size: 1em;
+    font-weight: bold;
+    line-height: 1;
+    font-family: 'Domine', serif;
+
 }
 
 .headertext {
@@ -181,6 +200,11 @@ html {
 }
 
 .patreon-link:hover {
+    color: orange;
+
+}
+
+.normal-link:hover {
     color: aqua;
 
 }
