--- a/style.css
+++ b/style.css
@@ -3,15 +3,42 @@ html {
     font-family: 'Domine', serif;
 }
 
+@font-face {
+    font-family: 'round';
+    src: url(BRLNSDB.ttf);
+}
+
 .mainbody {
-    background-color: #202020;
+    background-color: rgb(130, 118, 134);
     color: white;
     width: 840px;
     height: 600px;
-    padding: 35px;
     display: table;
     margin-left: auto;
     margin-right: auto;
+    padding: 35px;
+}
+
+.typefilter {
+    height: 10px;
+    float: right;
+    text-align: center;
+    text-shadow: rgb(7, 59, 136) -1px -1px 0px, rgb(7, 59, 136) 1px -1px 0px, rgb(7, 59, 136) -1px 1px 0px, rgb(7, 59, 136) 1px 1px 0px;
+    color: white;
+    font-size: 1em;
+    font-weight: bold;
+    line-height: 10px;
+    font-family: "Franklin Gothic Medium", serif;
+    background-color: black;
+    border-radius: 15px;
+    margin: 5px;
+    padding: 10px;
+}
+
+.typeOfPost {
+    position: absolute;
+    top: 0%;
+    right: 0%;
 }
 
 .collapsible {
@@ -25,6 +52,13 @@ html {
     outline: none;
     font-size: 15px;
 
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 10px;
+    padding: 10px;
 }
 
 .active,
@@ -72,16 +106,24 @@ html {
 
 .centered {
     position: absolute;
-    top: 30%;
-    left: 20%;
+    bottom: 0px;
+    left: 0px;
+    width: inherit;
     color: white;
-    text-shadow: 2px 2px purple;
+    text-shadow: rgb(136, 70, 190) 2px 2px 1px, rgb(136, 70, 190) 1px 1px 1px;
     font-size: 20px;
     font-weight: bold;
     line-height: 1;
-    font-family: 'Domine', serif;
+    font-family: round, sans-serif;
     text-align: left;
+    padding: 10px;
 
+}
+
+.bottom-holder {
+    position: relative;
+    display: flex;
+    width: 300px;
 }
 
 .centered:hover {
@@ -105,82 +147,101 @@ html {
 }
 
 .date {
-    position: absolute;
-    top: 20%;
-    left: 90%;
-    padding-bottom: 5px;
-    color: thistle;
-    text-shadow: 2px 2px #000;
-    font-size: 1em;
-
-
-    line-height: 1;
-    font-family: 'Domine', serif;
+    position: relative;
+    top: 5%;
+    left: 5%;
+    color: white;
+    text-shadow: rgb(0, 0, 0) 1px 2px 6px;
+    font-size: 14px;
+    font-weight: bold;
+    font-family: round, sans-serif;
+    text-decoration: none;
 }
 
 
 .description {
     position: absolute;
-    top: 40%;
-    left: 20%;
     text-align: left;
-
-    padding-left: 0px;
-    padding-top: 23px;
-    padding-bottom: 5px;
+    width: 280px;
+    display: flex;
     color: white;
-    text-shadow: 1px 1px #000;
-    font-size: 1em;
-
+    text-shadow: rgb(0, 0, 0) 1px 1px;
+    font-size: 15px;
+    font-weight: 100;
     line-height: 1;
-    font-family: 'Domine', serif;
+    font-family: round, sans-serif;
+    margin: 10px;
 }
 
+.unit_card {
+    position: relative;
+    background-color: black;
+    color: white;
+    width: 300px;
+    height: auto;
+    display: grid;
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    text-shadow: rgb(0, 0, 0) 2px 2px 8px;
+    border-radius: 15px;
+}
 
+.centeredbox {
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    width: inherit;
+    height: 40px;
+    background: rgba(0, 0, 0, 0.3);
+}
 
 .preview-image-holder {
+    background-color: aliceblue;
+    color: white;
     position: relative;
-    width: 100%;
-    height: 80px;
-    border: 1px solid black;
-    background-size: contain;
+    background-size: auto;
+    display: flex;
+    width: 300px;
+    height: 160px;
+    border-radius: 15px 15px 0px 0px;
+    text-decoration: none;
 }
 
-.preview-image-holder:hover {
-    border: 1px solid white;
 
-}
 
 .patreon-link {
 
     height: 40px;
     color: white;
     padding-right: 20px;
-
+    display: flex;
+    width: inherit;
     padding-top: 10px;
-    text-shadow: 1px 1px #000;
+    text-shadow: rgb(0, 0, 0) 1px 1px;
     text-align: right;
     font-size: 1em;
     font-weight: bold;
     line-height: 1;
-    font-family: 'Domine', serif;
+    font-family: round, serif;
     background-color: black;
 }
 
 .normal-link {
 
+    position: absolute;
     height: 40px;
     width: 550px;
     color: white;
     padding-left: 30px;
     padding-top: 15px;
-    text-shadow: 1px 1px #000;
+    text-shadow: rgb(0, 0, 0) 1px 1px;
     text-align: left;
-    float: left;
+    display: flex;
     font-size: 1em;
     font-weight: bold;
     line-height: 1;
-    font-family: 'Domine', serif;
+    font-family: 'round', serif;
 
 }
 
