--- a/style.css
+++ b/style.css
@@ -82,27 +82,77 @@ html {
     background-size: cover;
 }
 
+.header2 {
+    color: white;
+    text-shadow: rgb(136, 70, 190) 3px 3px 1px, rgb(136, 70, 190) 1px 1px 1px,
+        rgb(136, 70, 190) -1px -1px 1px;
+
+    font-size: 40px;
+    font-weight: bold;
+    line-height: 1;
+    font-family: round, sans-serif;
+}
+
 .hero-text {
     text-align: center;
-    position: absolute;
-    font-family: 'Duru Sans', sans-serif;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -30%);
-    text-shadow: 2px 2px 5px black;
-    text-shadow:
-        -1px -1px 0 #000,
-        1px -1px 0 #000,
-        -1px 1px 0 #000,
-        2px 2px 5px black,
-        -2px -2px 5px black, 1px 1px 0 #000;
-    color: whitesmoke;
+
+    width: 500px;
+    position: relative;
+    top: 10px;
+
+
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .holder {
     text-align: center;
     top: 20%;
     left: 100%;
+}
+
+.filterButton {
+    background-color: #3c422f;
+    border: 2px solid #999c91;
+
+
+}
+
+.tab {
+    width: 840px;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #353635;
+    border: 2px solid #353635;
+    border-radius: 10px 10px 0px 0px;
+}
+
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    border-radius: 10px;
+    padding: 14px 16px;
+    transition: 0.3s;
+    text-shadow: rgb(7, 59, 136) -1px -1px 0px, rgb(7, 59, 136) 1px -1px 0px, rgb(7, 59, 136) -1px 1px 0px, rgb(7, 59, 136) 1px 1px 0px;
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    line-height: 10px;
+    font-family: "Franklin Gothic Medium", serif;
+
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
 }
 
 .buttons {
@@ -126,6 +176,7 @@ html {
     color: white;
     text-shadow: rgb(136, 70, 190) 3px 3px 1px, rgb(136, 70, 190) 1px 1px 1px,
         rgb(136, 70, 190) -1px -1px 1px;
+
     font-size: 20px;
     font-weight: bold;
     line-height: 1;
@@ -201,6 +252,7 @@ html {
     margin-right: auto;
     box-shadow: 5px 10px rgba(0, 0, 0, 0.3);
     border-radius: 15px;
+    transition: 0.3s;
 }
 
 .centeredbox {
@@ -402,33 +454,130 @@ Youtube {
     color: antiquewhite;
 }
 
-#myBtn {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Fixed/sticky position */
-    bottom: 20px;
-    /* Place the button at the bottom of the page */
-    right: 30px;
-    /* Place the button 30px from the right */
-    z-index: 99;
-    /* Make sure it does not overlap */
-    border: none;
-    /* Remove borders */
-    outline: none;
-    /* Remove outline */
-    background-color: darkmagenta;
-    /* Set a background color */
+.fa-brands {
+    padding: 10px;
+    font-size: 20px;
+    width: auto;
+    text-align: center;
+    text-decoration: none;
+    margin: 5px;
+    border-radius: 50%;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+    background: #3B5998;
     color: white;
-    /* Text color */
-    cursor: pointer;
-    /* Add a mouse pointer on hover */
-    padding: 15px;
-    /* Some padding */
-    border-radius: 10px;
-    /* Rounded corners */
-    font-size: 18px;
-    /* Increase font size */
+}
+
+.fa-twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.fa-google {
+    background: #dd4b39;
+    color: white;
+}
+
+.fa-linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.fa-youtube {
+    background: #bb0000;
+    color: white;
+}
+
+.fa-instagram {
+    background: #125688;
+    color: white;
+}
+
+.fa-pinterest {
+    background: #cb2027;
+    color: white;
+}
+
+.fa-snapchat-ghost {
+    background: #fffc00;
+    color: white;
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+.fa-skype {
+    background: #00aff0;
+    color: white;
+}
+
+.fa-android {
+    background: #a4c639;
+    color: white;
+}
+
+.fa-dribbble {
+    background: #ea4c89;
+    color: white;
+}
+
+.fa-vimeo {
+    background: #45bbff;
+    color: white;
+}
+
+.fa-tumblr {
+    background: #2c4762;
+    color: white;
+}
+
+.fa-vine {
+    background: #00b489;
+    color: white;
+}
+
+.fa-foursquare {
+    background: #45bbff;
+    color: white;
+}
+
+.fa-stumbleupon {
+    background: #eb4924;
+    color: white;
+}
+
+.fa-flickr {
+    background: #f40083;
+    color: white;
+}
+
+.fa-yahoo {
+    background: #430297;
+    color: white;
+}
+
+.fa-soundcloud {
+    background: #ff5500;
+    color: white;
+}
+
+.fa-reddit {
+    background: #ff5700;
+    color: white;
+}
+
+.fa-twitch {
+    background: #7d12a5;
+    color: white;
+}
+
+.fa-patreon {
+    background: #ff5700;
+
+    color: white;
 }
 
 #myBtn:hover {
