--- a/style.css
+++ b/style.css
@@ -119,10 +119,12 @@ html {
 }
 
 .tab {
-    width: 840px;
+
     overflow: hidden;
     margin-left: auto;
     margin-right: auto;
+    justify-content: center;
+    display: flex;
 }
 
 /* Create an active/current tablink class */
