--- a/style.css
+++ b/style.css
@@ -227,19 +227,18 @@ html {
 }
 
 .centered {
-    width: 280px;
     color: white;
     text-shadow:
         #30144a -1px -2px 0px,
         #30144a 2px -2px 1px,
         #30144a 0px 1px 1px;
-    font-size: 20px;
+    font-size: 25px;
     line-height: 1;
     height: auto;
     font-family: "Franklin Gothic Medium", sans-serif;
     text-align: left;
     padding: 5px;
-    padding-left: 10px;
+    margin: 10px;
 }
 
 .bottom-holder {
@@ -320,6 +319,45 @@ html {
     box-shadow: 5px 10px rgba(0, 0, 0, 0.3);
     border-radius: 15px;
     transition: 0.3s;
+}
+
+/* Basic styling for the dropdown */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-btn {
+    background-color: #3498db;
+    color: white;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+.dropdown-btn:hover {
+    background-color: #2980b9;
+}
+
+.dropdown-content {
+    display: none;
+    position: relative;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #f1f1f1;
 }
 
 .centeredbox {
