--- a/style.css
+++ b/style.css
@@ -775,3 +775,31 @@ all {
     background-color: #555;
     /* Add a dark-grey background on hover */
 }
+
+bullet:before {
+    content: "\25C6";
+    padding-right: 5px;
+}
+
+bulletlist {
+    text-indent: -2px;
+}
+
+bulletlist:after {
+    text-indent: -2px;
+}
+
+.bulletlist .bulletlist {
+    text-indent: -2px;
+}
+
+bulletlist bulletlist bullet::before {
+    content: "⬦";
+    /* Different bullet icon for nested bullets */
+}
+
+bullet {
+    display: list-item;
+    list-style-type: none;
+    padding-left: 12px;
+}
